; ModuleID = '/home/carl/AnghaBench/linux/net/decnet/extr_dn_nsp_out.c_dn_nsp_rtt.c'
source_filename = "/home/carl/AnghaBench/linux/net/decnet/extr_dn_nsp_out.c_dn_nsp_rtt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.dn_scp = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*, i64)* @dn_nsp_rtt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dn_nsp_rtt(%struct.sock* %0, i64 %1) #0 {
  %3 = alloca %struct.sock*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.dn_scp*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.sock* %0, %struct.sock** %3, align 8
  store i64 %1, i64* %4, align 8
  %9 = load %struct.sock*, %struct.sock** %3, align 8
  %10 = call %struct.dn_scp* @DN_SK(%struct.sock* %9)
  store %struct.dn_scp* %10, %struct.dn_scp** %5, align 8
  %11 = load %struct.dn_scp*, %struct.dn_scp** %5, align 8
  %12 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %6, align 8
  %14 = load %struct.dn_scp*, %struct.dn_scp** %5, align 8
  %15 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %7, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %2
  %20 = load i64, i64* %4, align 8
  %21 = sub nsw i64 0, %20
  store i64 %21, i64* %4, align 8
  br label %22

22:                                               ; preds = %19, %2
  %23 = load i64, i64* %4, align 8
  %24 = shl i64 %23, 3
  %25 = load i64, i64* %6, align 8
  %26 = sub nsw i64 %24, %25
  store i64 %26, i64* %8, align 8
  %27 = load i64, i64* %8, align 8
  %28 = ashr i64 %27, 3
  %29 = load i64, i64* %6, align 8
  %30 = add nsw i64 %29, %28
  store i64 %30, i64* %6, align 8
  %31 = load i64, i64* %6, align 8
  %32 = icmp sge i64 %31, 1
  br i1 %32, label %33, label %37

33:                                               ; preds = %22
  %34 = load i64, i64* %6, align 8
  %35 = load %struct.dn_scp*, %struct.dn_scp** %5, align 8
  %36 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %35, i32 0, i32 0
  store i64 %34, i64* %36, align 8
  br label %40

37:                                               ; preds = %22
  %38 = load %struct.dn_scp*, %struct.dn_scp** %5, align 8
  %39 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %38, i32 0, i32 0
  store i64 1, i64* %39, align 8
  br label %40

40:                                               ; preds = %37, %33
  %41 = load i64, i64* %8, align 8
  %42 = ashr i64 %41, 1
  store i64 %42, i64* %8, align 8
  %43 = load i64, i64* %8, align 8
  %44 = icmp sgt i64 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %40
  %46 = load i64, i64* %8, align 8
  br label %50

47:                                               ; preds = %40
  %48 = load i64, i64* %8, align 8
  %49 = sub nsw i64 0, %48
  br label %50

50:                                               ; preds = %47, %45
  %51 = phi i64 [ %46, %45 ], [ %49, %47 ]
  %52 = load i64, i64* %7, align 8
  %53 = sub nsw i64 %51, %52
  %54 = ashr i64 %53, 2
  %55 = load i64, i64* %7, align 8
  %56 = add nsw i64 %55, %54
  store i64 %56, i64* %7, align 8
  %57 = load i64, i64* %7, align 8
  %58 = icmp sge i64 %57, 1
  br i1 %58, label %59, label %63

59:                                               ; preds = %50
  %60 = load i64, i64* %7, align 8
  %61 = load %struct.dn_scp*, %struct.dn_scp** %5, align 8
  %62 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %61, i32 0, i32 1
  store i64 %60, i64* %62, align 8
  br label %66

63:                                               ; preds = %50
  %64 = load %struct.dn_scp*, %struct.dn_scp** %5, align 8
  %65 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %64, i32 0, i32 1
  store i64 1, i64* %65, align 8
  br label %66

66:                                               ; preds = %63, %59
  ret void
}

declare dso_local %struct.dn_scp* @DN_SK(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
